# python-hacks

./: .gitignore  1. Caching function calls.ipynb  3. Python truth values.ipynb  7. glob module.ipynb  Dictionaries.ipynb  LICENSE  Pydantic data classes & settings management.ipynb  README.md  Type hints.ipynb  Write_better_Python.ipynb  [Placeholder] Lambda functions.ipynb  defaultdicts.ipynb  pyproject.toml
python_hacks/: _config.yml  _toc.yml
python_hacks/_build/.doctrees/: 1. Caching function calls.doctree  environment.pickle  index.doctree  intro.doctree  markdown.doctree  notebooks.doctree
python_hacks/_build/html/: .buildinfo  1. Caching function calls.html  genindex.html  index.html  intro.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
python_hacks/_build/html/_sources/: 1. Caching function calls.ipynb  index.md
python_hacks/_build/jupyter_execute/: 1. Caching function calls.ipynb  1. Caching function calls.py  notebooks.ipynb
